@@ -10,6 +10,10 @@
        It is for convenience. Do not mistake this for the actual file.
 
   07 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py
+  pym/portage_dep.py: Added a new parameter to use_reduce so that !arch?
+  checks can be adhered to even when matchall=1 and arch is not is masklist.
+
+  07 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py
   pym/portage_dep.py: Added profile masked use flags to repoman check.
   Moved || refactoring to a separate function. Reworked use_reduce logic
   into simpler sections.
